@@ -100,7 +100,8 @@
         <addForeignKeyConstraint
                 baseTableName="article" baseColumnNames="publication_id"
                 constraintName="fk_article_pub"
-                referencedTableName="publication" referencedColumnNames="id"/>
+                referencedTableName="publication" referencedColumnNames="id"
+                deleteCascade="true"/>
     </changeSet>
 
     <changeSet id="14" author="nvoxland">
