@@ -37,6 +37,7 @@
                         <tr><th>referencedColumnName</th><td>Column(s) (comma-separate if multiple) the foreign key points to <em>[required]</em></td></tr>
                         <tr><th>deferrable</th><td>Is the foreign key deferrable</td></tr>
                         <tr><th>initiallyDeferred</th><td>Is the foreign key initially deferred</td></tr>
+                        <tr><th>deleteCascade</th><td>Should the constraint be marked "on delete cascade"</td></tr>
                     </table>
 
                     <h3>Database Compatiblity</h3>
